astronomy-helmcharts/astronomy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astronomy-ingress
  namespace: astronomy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
    - host: astronomy.siddheshnikam.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: opentelemetry-demo-frontendproxy
                port:
                  number: 8080
          # - path: "/argocd"
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: argocd-server.argocd.svc.cluster.local
          #       port:
          #         number: 80
